crates/crates_io_cargo_toml/tests/snapshots/parse__workspace_dependency.snap
---
source: crates/crates_io_cargo_toml/tests/parse.rs
expression: m
---
Manifest {
    package: Some(
        Package {
            name: "core",
            edition: None,
            version: Some(
                Local(
                    "0.1.0",
                ),
            ),
            build: None,
            workspace: None,
            authors: None,
            links: None,
            description: None,
            homepage: None,
            documentation: None,
            readme: None,
            keywords: None,
            categories: None,
            license: None,
            license_file: None,
            repository: None,
            rust_version: None,
            exclude: None,
            include: None,
            default_run: None,
            autolib: None,
            autobins: None,
            autoexamples: None,
            autotests: None,
            autobenches: None,
            publish: None,
            resolver: None,
        },
    ),
    dependencies: Some(
        {
            "chrono": Inherited(
                InheritedDependencyDetail {
                    workspace: True,
                    features: None,
                    optional: None,
                },
            ),
            "config": Simple(
                "0.13",
            ),
            "tokio": Inherited(
                InheritedDependencyDetail {
                    workspace: True,
                    features: Some(
                        [
                            "rt-multi-thread",
                        ],
                    ),
                    optional: None,
                },
            ),
        },
    ),
    dev_dependencies: None,
    build_dependencies: None,
    target: None,
    features: None,
    bin: [],
    bench: [],
    test: [],
    example: [],
    patch: None,
    lib: None,
}
